--- a/.templates/README.md.mustache
+++ b/.templates/README.md.mustache
@@ -113,16 +113,9 @@ Please refer to project's style guidelines and guidelines for submitting patches
 
 * [node-host-validator](https://github.com/9fv/node-host-validator)
 
-
 ## <a name="history"> History
 
-### v0.1.0 (2018-02-08)
-
-* [Update dependencies to enable Greenkeeper](https://github.com/9fv/node-entity-host/pull/1).
-
-### v0.1.0-alpha1 (2018-02-08)
-
-Initial version.
+Please refer to [the changelog file](docs/CHANGELOG.md).
 
 ## <a name="license"> License
 
